--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
 
-    implementation 'com.github.mancj:MaterialSearchBar:0.7.1'
+    implementation 'com.github.mancj:MaterialSearchBar:0.7.1'//vid-07
 
     implementation 'com.google.android.gms:play-services-places:11.6.2'
 
